[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "uinex"
version = "0.1.0"
dependencies = [
    "pillow",
    "pygame",
]
authors = [
  { name = "Sackey Ezekiel Etrue", email = "sackeyetrue@gmail.com" },
  {name = "PygameUI Contributers"},
]
maintainers = [
  { name = "Sackey Ezekiel Etrue", email = "sackeyetrue@gmail.com" },
]
description = "Create modern looking GUIs with pygame."
long_description = "A modern and customizable pygame UI-library."
long_description_content_type = "text/markdown"
readme = "README.md"
requires-python = ">=3.13"
keywords=[
  "pygame", "uinex", "game ui", "2d", "games", "development", "gui", "library"
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Operating System :: Microsoft :: Windows",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.scripts]
uinex = "uinex.__main__:main"

[project.urls]
Homepage = "https://github.com/djoezeke/uinex"
Documentation = "https://github.com/djoezeke/uinex#readme"
Issues = "https://github.com/djoezeke/uinex/issues"
"Release Notes" = "https://github.com/djoezeke/uinex/releases"
Source = "https://github.com/djoezeke/uinex"

[dependency-groups]
dev = []

[project.optional-dependencies]
dev = []
docs = []

[tool.uv]
package = true 

[tool.uv.sources]
uinex = { path = "../uinex", editable = true }

[tool.uv.build-backend]
module-name = "uinex"
module-root = ""
source-include = ["*.md",]
source-exclude = ["tests/",]
wheel-exclude = ["*.bin"]
namespaces = false

# Configure Ruff's linting rules
[tool.ruff]
src = ["uinex", "examples", "tests"]
fix = true
show-fixes = true
output-format = "full"
select = ["E", "W", "F", "I"] # Example: select error, warning, flake8-bugbear, and isort rules
ignore = ["E501"] # Example: ignore line length errors
line-length = 120 # Example: set line length

# Further linting configurations
[tool.ruff.lint]
unfixable = ["F841"] # Example: prevent fixing of unused local variables
  select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycodestyle warning
]
ignore = [
    "UP038",  # keep isinstance tuple
]
  
[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false

# Configure Ruff's formatter
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
