[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "uinex"
version = "0.1.0"
description = "Create modern looking GUIs with pygame."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Sackey Ezekiel Etrue", email = "sackeyetrue@gmail.com" }]
maintainers = [
  { name = "Sackey Ezekiel Etrue", email = "sackeyetrue@gmail.com" },
]
keywords = [
  "pygame",
  "uinex",
  "game ui",
  "2d",
  "games",
  "development",
  "gui",
  "library",
]
classifiers = [
  "Typing :: Typed",
  "Topic :: Games/Entertainment",
  "Topic :: Multimedia :: Graphics",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = ["pillow", "pygame"]

[project.scripts]
uinex = "uinex.__main__:main"

[project.urls]
Homepage = "https://github.com/djoezeke/uinex"
Documentation = "https://github.com/djoezeke/uinex#readme"
Issues = "https://github.com/djoezeke/uinex/issues"
"Release Notes" = "https://github.com/djoezeke/uinex/releases"
Source = "https://github.com/djoezeke/uinex"

[project.optional-dependencies]
standard = ["pillow"]

[dependency-groups]
dev = [
  # We add uinex[standard] so `uv sync` considers the extras.
  "uinex[standard]",
  "ruff",            # format & check
  "pytest",          # testing
  "twine",           # check dist
]
docs = [
  "mkdocs==1.6.1",
  "mkdocs-material==9.6.13",
  "mkdocstrings-python==1.16.12",
  "mkdocs-llmstxt==0.2.0",
]

[tool.uv]
package = true
required-version = ">=0.8.6"
default-groups = ["dev", "docs"]

[tool.uv.build-backend]
module-name = "uinex"
module-root = ""
source-include = ["*.md"]
source-exclude = ["tests/", "examples/"]
wheel-exclude = ["*.bin"]
namespaces = false

# Configure Ruff's linting rules
[tool.ruff]
src = ["uinex", "tests", "examples"]
fix = true
show-fixes = true
output-format = "full"
line-length = 120                    # line length

# Further linting configurations
[tool.ruff.lint]
unfixable = ["F841"] # Example: prevent fixing of unused local variables
select = [
  "B",  # flake8-bugbear
  "E",  # pycodestyle error
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
  "W",  # pycodestyle warning
]
ignore = [
  "E501",  # ignore line length errors
  "UP038", # keep isinstance tuple
]

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false
combine-as-imports = true
split-on-trailing-comma = true
known-first-party = ["uinex"]
known-third-party = ["pygame"]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

# Configure Ruff's formatter
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
